# DEMO-CHAT

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  STRUCTURE.md  docker-compose.dev.yml  docker-compose.yml  package.json
.devcontainer/: devcontainer.json
apps/ai/: .dockerignore  .env.example  Dockerfile.dev  README.md  pyproject.toml  requirements.txt
apps/ai/app/: main.py
apps/api/: .dockerignore  .env.example  .eslintrc.js  README.md  package.json  tsconfig.json
apps/api/src/: db.ts  index.ts
apps/api/src/routes/: auth.ts  chat.ts
apps/web/: .dockerignore  .env.example  .eslintrc.js  Dockerfile  Dockerfile.dev  README.md  next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx
scripts/: setup.sh
